--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -37,6 +37,7 @@
 //   MODULES
 // -------------------------------------
 
+'modules/_demo-container',
 
 // -------------------------------------
 //   VENDOR
